package org.hfeng.misc.hfdp.ch6.simpleremote;

public interface Command {
    public void execute();
}
