package org.hfeng.misc.hfdp.ch6.simpleremote;

public class Light {
    public void on() {
        System.out.println("Light On");
    }
    public void off() {
        System.out.println("Light Off");
    }
}
